apps/testetsetset/tets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tets
  namespace: testetsetset
  labels:
    app: tets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tets
  template:
    metadata:
      labels:
        app: tets
    spec:
      containers:
      - name: tets
        image: registry.k8s.integratn.tech/python-sample-app:latest
        resources:
          limits:
            memory: 256Mi
            cpu: 200m
          requests:
            memory: 128Mi
            cpu: 100m
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: tets-pvc
          mountPath: /app/data
      volumes:
      - name: tets-pvc
        persistentVolumeClaim:
          claimName: tets-pvc
