apps/testetsetset/tets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tets
  labels:
    app: tets
  namespace: testetsetset
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - python-sample-app.k8s.integratn.tech
    secretName: python-sample-app-tls
  rules:
  - host: python-sample-app.k8s.integratn.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tets
            port: 
              name: http
